# llm-zoomcamp

./: =2.12  README.md  pyproject.toml
W1/: homework.ipynb
W2/: q3_ollama.py  q6_ollama.py
W3/: homework.ipynb
W4/: homework.ipynb
W5/: homework.ipynb
llm_zoomcamp_project/: README.md
llm_zoomcamp_project/data/: info.json  research.docx
workshop_dlt/: homework_workshop_dlt.ipynb
